test(UsuarioTest): unUsuarioNoRecibeSugerenciaDeIncidenteCerrado